src/app/styles/Contact.module.css
.contact_container {
padding: 40px 37vh;
  font-family: 'Arial', sans-serif;
  background-color: #fff;
  color: #333;
}

.title {
  font-size: 36px;
  font-weight: 300;
  margin-bottom: 30px;
}

.title span {
  font-weight: 500;
  font-family: serif;
  color: #4c4c4c;
}

.contact_form {
  border: 1px solid #ccc;
  padding: 30px;
  margin-bottom: 40px;
}

.form_row {
  display: flex;
  gap: 20px;
  margin-bottom: 20px;
}

.form_group {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.form_group label {
  margin-bottom: 5px;
  font-size: 14px;
  color: #555;
}

.form_group label span {
  color: red;
}

.form_group input,
.form_group textarea {
  padding: 10px;
  border: none;
  border-bottom: 1px solid #ccc;
  outline: none;
  font-size: 14px;
}

.full_width {
  width: 100%;
}

.captcha_box {
  margin: 20px 0;
}

.recaptcha_placeholder {
  padding: 15px;
  border: 1px solid #ccc;
  width: fit-content;
  background-color: #f9f9f9;
}

.privacy_policy {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-bottom: 20px;
}

.submit_btn {
  padding: 10px 20px;
  border: 1px solid #000;
  background: #fff;
  cursor: pointer;
  font-size: 14px;
}

.footer {
  font-size: 14px;
  color: #333;
  margin-top: 50px;
}

.footer p {
  margin: 5px 0;
}

.footer a {
  text-decoration: none;
  color: #333;
}

.disclaimer {
  font-size: 12px;
  margin-top: 10px;
  color: #777;
}

.footer_links {
  margin-top: 20px;
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
}
.checkbox{
  width: 10px;
}

@media (max-width: 768px) {
  .contact_container {
padding: 0;
  font-family: 'Arial', sans-serif;
  background-color: #fff;
  color: #333;
}

  .form_group input,
.form_group textarea {
  padding: 10px;
  border: none;
  border-bottom: 1px solid #ccc;
  outline: none;
  font-size: 11px;
}
}
@media (max-width: 470px) {
  .contact_container {
padding: 0;
  font-family: 'Arial', sans-serif;
  background-color: #fff;
  color: #333;
}

  .form_group input,
.form_group textarea {
  padding: 10px;
  border: none;
  border-bottom: 1px solid #ccc;
  outline: none;
  font-size: 11px;
}
}

